--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-dotdotdot",
+  "name": "@marketmuse/react-dotdotdot",
   "version": "1.3.1",
   "description": "Multiline text ellipsis for react",
   "main": "src/index.js",
